fix: header bar icons alignment (#528)

--- a/dataprep-webapp/src/app/components/widgets-containers/app-header-bar/app-header-bar.scss
+++ b/dataprep-webapp/src/app/components/widgets-containers/app-header-bar/app-header-bar.scss
@@ -11,16 +11,6 @@
 
  ============================================================================*/
 
-.nav.navbar-nav {
-	li[role="presentation"] {
-		i[class^="icon-"] {
-			&:before {
-				font-size: 1.8rem;
-			}
-		}
-	}
-}
-
 @keyframes fadeIn {
 	from { opacity: 0; }
 	to   { opacity: 1; }
